@@ -15,7 +15,10 @@ set -o pipefail
 
 JACOCO_FAIL=
 
-mvn --batch-mode jacoco:prepare-agent test jacoco:report coveralls:jacoco -Denforcer.skip=true -DskipMinify=true >jacoco.log 2>&1 || JACOCO_FAIL=yes
+mvn --batch-mode jacoco:prepare-agent test jacoco:report -Denforcer.skip=true -DskipMinify=true >jacoco.log 2>&1 || JACOCO_FAIL=yes
+
+# -Z Exit with 1 if not successful. Default will Exit with 0
+bash <(curl -s https://codecov.io/bash) -Z >>jacoco.log 2>&1 || JACOCO_FAIL=yes
 
 print_status "$JACOCO_FAIL" 'Publish code coverage'
 
